# qt-solid

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package.json  qt-solid.config.ts  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.github/workflows/: windows-native.yml  windows-sea.yml
examples/calculator/: README.md  app.tsx  calculator-app.tsx  calculator-logic.ts  calculator-view.tsx  package.json
examples/counter/: README.md  app.tsx  counter-app.tsx  counter-view.tsx  package.json
examples/rendering-gallery/: app.tsx  package.json  rendering-gallery-app.tsx  rolldown.config.mjs
examples/spin-triangle/: app.tsx  package.json  spin-triangle-app.tsx
examples/storyboard/: app.tsx  dev-entry.tsx  package.json  storyboard-app.tsx
scripts/: build-example-sea.mjs  ensure-sea-node.d.mts  ensure-sea-node.mjs  run-vite-dev-app.mjs  run-with-devtools.mjs
test/: animate-presence.test.ts  bootstrap.test.ts  build-node-bundle.ts  calculator-logic.test.ts  compiler-shared.test.ts  controller-bridge.test.ts  create-variants.test.ts  devtools-breakpoint-child.test.ts  devtools-cdp.test.ts  example-widget-bundle.test.ts  example-widget-library.test.ts  motion-transition-lowering.test.ts  native-lifecycle.test.ts  native-renderer-binding.test.ts  native-timer-bridge.test.ts  package-boundaries.test.ts  rolldown-app-entry.test.ts  rolldown-plugin-runtime.test.ts  routing-match.test.ts  sea-node.test.ts  sea-prep.test.ts  solid-renderer-motion-tsx.test.ts  solid-renderer-native-intrinsic-tsx.test.ts  solid-renderer-native-tsx.test.ts  solid-renderer-native.test.ts  solid-renderer-tsx.test.tsx  solid-renderer.test.ts  source-metadata.test.ts  vite-hmr-layout-geometry.test.ts  vite-hmr-memory.test.ts  vite-plugin-runtime.test.ts  widget-library-registry.test.ts
test/fixtures/: devtools-broker-host.mjs
(+4 files in other folders)
