[workspace]
members = [
    "packages/core-native/crates/native",
    "packages/core-native/crates/window-host",

    "packages/core-native/crates/qt-compositor",
    "packages/core-native/crates/motion",
    "packages/core-native/macros/fragment-derive",
]
resolver = "2"

[patch.crates-io]
anyrender_vello_hybrid = { path = "third_party/anyrender_vello_hybrid" }
