[workspace]
members = [
    "packages/core/crates/native",
    "packages/core/crates/window-host",

    "packages/core/crates/qt-compositor",
    "packages/core/crates/motion",
    "packages/core/macros/fragment-derive", "packages/core/crates/qt-host",
]
resolver = "2"

[patch.crates-io]
anyrender_vello_hybrid = { path = "third_party/anyrender_vello_hybrid" }
